fix: skeletons too wide on mobile phones

--- a/frontend/sumhub/src/app/ui/search.module.css
+++ b/frontend/sumhub/src/app/ui/search.module.css
@@ -3,7 +3,7 @@
 }
 
 .minWidthBox{
-    min-width: 804px;
+    min-width: min(804px, 100vw);
 }
 
 .minHeightBox{
